--- a/todolistapp/index.html
+++ b/todolistapp/index.html
@@ -11,11 +11,14 @@
         <script src="jquery.js"></script>
         <script src="jquery-ui.js"></script>   
         <style>
+            body {
+                background-color: lightgrey;
+            }
             #container
             {
-                width: 700px;
-                height: 450px;
-                margin: 70px auto;
+                width: 400px;
+                height: 600px;
+                margin: 10px auto;
                 border: 2px solid olive;
             }
             h2
@@ -25,8 +28,8 @@
             }
             #projects
             {
-                width: 650px;
-                height:250px;
+                width: 380px;
+                height:400px;
                 margin: 0px auto;
                 background-color: lightblue;
             }
@@ -34,8 +37,8 @@
             {
                 border: 1px solid green;
                 cursor: pointer;
-                padding: 5px;
-                margin-bottom: 5px;
+                padding: 2px;
+                margin-bottom: 2px;
             }
             ol li:hover 
             {
@@ -43,13 +46,13 @@
             }
             #btnAddProject
             {
-                margin-left: 562px;
-                margin-bottom: 20px;
+                margin-left: 300px;
+                margin-bottom: 7px;
             }
             #btnAddTask
             {
-                margin-left: 576px;
-                margin-top: 20px;
+                margin-left: 300px;
+                margin-top: 7px;
             }
             .ui-icon-close
             {
